Add chatbox messenger, there are some bugs needs to fix

--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="./src/assets/images/Icons/ChatIcon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="El Chatto Matto social network like web application by Beka Aladashvili, Connect Engage Enjoy." />
+    <meta name="referrer" content="no-referrer" />
     <title>El Chatto Matto</title>
   </head>
   <body>
