--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="El Chatto Matto social network like web application by Beka Aladashvili, Connect Engage Enjoy." />
     <meta name="referrer" content="no-referrer" />
+    <meta name="theme-color" content="#6B1E7B" />
+    <meta http-equiv="Cache-Control" content="public, max-age=31536000" />
+    <link rel="preconnect" href="https://firebase.google.com/" />
+    <link rel="preconnect" href="https://fonts.google.com/" />
     <title>El Chatto Matto</title>
   </head>
   <body>
