--- a/index.html
+++ b/index.html
@@ -4,9 +4,11 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="./src/assets/images/Icons/ChatIcon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="El Chatto Matto social network like web application by Beka Aladashvili, Connect Engage Enjoy." />
+    <meta name="description" content="El Chatto Matto social network like web application, Connect Engage Enjoy." />
     <meta name="referrer" content="no-referrer" />
     <meta name="theme-color" content="#6B1E7B" />
+    <meta name="keywords" content="Chat, Online chat, El Chatto Matto, Chatto Matto, Social Network" />
+    <meta name="author" content="Beka Aladashvili" />
     <meta http-equiv="Cache-Control" content="public, max-age=36000" />
     <link rel="preconnect" href="https://firebase.google.com/" />
     <link rel="preconnect" href="https://fonts.google.com/" />
