meta tag for mixed content

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <meta name="keywords" content="Chat, Online chat, El Chatto Matto, Chatto Matto, Social Network" />
     <meta name="author" content="Beka Aladashvili" />
     <meta http-equiv="Cache-Control" content="public, max-age=36000" />
+    <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">
     <link rel="preconnect" href="https://firebase.google.com/" />
     <link rel="preconnect" href="https://fonts.google.com/" />
     <title>El Chatto Matto</title>
